<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">pintu</string>
    <string name="media_images">媒体库</string>
    <string name="help">帮助</string>
    <string name="list">列表</string>
    <string name="startWithEndDes">开始  + 完成赠言</string>
    <string name="startWithGame">开始 + 比赛</string>
    <string name="select">选择</string>
    <string name="selectType">选择分类</string>
    <string name="resolve">分解</string>
    <string name="delete">删除</string>
    <string name="changeType">改变分类</string>
    <string name="combinType">组成关卡类</string>
    <string name="splitCombin">拆散关卡类</string>
    <string name="errorSplitCombin">不是关卡类的不能进行此操作</string>
    <string name="order">排序</string>
    <string name="orderCancel">取消排序</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="add">添加</string>
    <string name="operationSelect">操作选择</string>
    <string name="imageSelect">选择图片</string>
    <string name="setEndDes">设置完成赠言</string>
    <string name="selectTip">-- 请选择  --</string>
    <string name="cancelSelect">取消选择</string>
    <string name="typeFilter">分类筛选</string>
    <string name="operation">操作</string>
    <string name="allType">所有分类</string>
    <string name="errorChangeType">不能将已经是关卡类的图片重新分类，可以将关卡类图片扩散后，再进行分类</string>
    <string name="errorCombinImage">不能将已经是关卡类的图片与其它图片组成关卡类</string>
    <string name="completeDel">删除成功</string>
    <string name="completeCombin">成功组成关卡类</string>
    <string name="successed">成功</string>
    <string name="failed">失败</string>
    <string name="errorCombinCount">至少需要选择两张图片</string>
    <string name="orderSuccessed">成功排序</string>
    <string name="errorNoImage">此分类暂无图片</string>
    <string name="errorOperaterSource">不能操作系统自带图片</string>
    <string name="errorOperaterCount">请先选择图片</string>
    <string name="warmTip">温馨提示</string>
    <string name="exit">退出</string>
    <string name="exitTip">您是否要退出游戏？</string>
    <string name="loading">正在加载中 ...</string>
    <string name="update">更新</string>
    <string name="errorOperaterSystem">不能操作系统自建的数据</string>
    <string name="alertDeleteType">您确定要删除此分类吗？</string>
    <string name="start">开始</string>
    <string name="random">随机</string>
    <string name="sound">声音</string>
    <string name="history">历史</string>
    <string name="typeManager">分类管理</string>
    <string name="setting">设置</string>
    <string name="next">下一个</string>
    <string name="screenHorizontal">横屏</string>
    <string name="screenVertical">竖屏</string>
    <string name="numColoum">列数设置</string>
    <string name="numRow">行数设置</string>
    <string name="operaterMode">操作模式</string>
    <string name="easyMode">简单模式</string>
    <string name="hardMode">困难模式</string>
    <string name="easyModeDesc">此种模式下，任意两个图格都可随意交换</string>
    <string name="hardModeDesc">此种模式下，只能交换附近两个图格</string>
    <string name="screenSetting">屏幕设置</string>
    <string name="cellNumSetting">单元格设置</string>
    <string name="chronometerInitialFormat">用时: <xliff:g id="initial-format">%s</xliff:g></string>
</resources>
