<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    >
    <Button  
		android:id="@+id/start"
		android:padding="30dip"
		android:textSize="60dip"
	    android:text="@string/start"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    />
	<LinearLayout
		android:layout_marginTop="10dip"
		android:layout_marginBottom="40dip"
		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center">
    	<CheckBox
    		android:id="@+id/sound"
    		android:text="@string/sound"
    		android:checked="true"
    		android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"/>
	    <CheckBox
	    	android:id="@+id/history"
    		android:text="@string/history"
    		android:layout_marginLeft="20dip"
    		android:layout_marginRight="20dip"
    		android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"/>
	    <CheckBox
	    	android:id="@+id/random"
    		android:text="@string/random"
    		android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
